<resources>
    <string name="app_name">I Chat</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Welcome\n Please enter the phone number</string>
    <string name="second_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don"t have to worry about anything.  </string>

    <!--Titles-->
    <string name="first_slide_title">Convenient Interaction</string>
    <string name="second_slide_title">Send Quick Messages</string>
    <string name="third_slide_title">Connect With Friends</string>
    <string name="fourth_slide_title">Free Messaging Chat</string>

    <!--Slide sign up - sign in-->
    <string name="Phone">Phone Number</string>
    <string name="Gender">Gender And BirthDay</string>
    <string name="Username">Create Username</string>
    <string name="Password">Create Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Sign_in">Sign in</string>

    <!--Slide sign up - sign in (description)-->
    <string name="PhoneDes">Fill in the phone number you are using</string>
    <string name="UsernameDes">Creating a username makes it easy for your friends to recognize you.</string>
    <string name="PasswordDes">Create a password with more than 6 characters.</string>
    <string name="Sign_in_des">Please enter your phone number and email to login</string>


    <string name="_84">+84 </string>
    <string name="_1234567890">1234567890</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="didn_t_receive_the_otp">You did not receive the code?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="finish">Finish</string>
</resources>