<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".Common.SpalshScreen.User.Register.fragment1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                style="@style/styleTitle_OnBroading"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="@string/PasswordDes"
                style="@style/styleDescription.CurrentContent"/>

            <EditText
                android:id="@+id/txtNewPass"
                style="@style/styleEditext"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_rounded_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:hint="@string/NewPassword"
                android:inputType="textNoSuggestions"
                android:paddingStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txtConfirmPass"
                style="@style/styleEditext"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_rounded_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:hint="@string/ConfirmPassword"
                android:inputType="textNoSuggestions"
                android:paddingStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_ctn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/finish"
            android:layout_below="@id/linearLayout2"
            style="@style/styleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>